2007-07-22 Alexander Malysh <amalysh at kannel.org>
   * gw/smsc/smsc_at.c: set reconnecting = 1 if we have issues opening
     device. So we will sleep reconnect time instead of hammering on
     maybe not existing device. This should fix #412.

2007-07-22 Alexander Malysh <amalysh at kannel.org>
   * gwlib/mime.c: don't add an extra CRLF to the end of a message part.
     Thanks to Paul Bagyenda <bagyenda at dsmagic.com>.
     [Msg-Id: <F83BC280-AF9A-4347-A255-6FF1A314C525@dsmagic.com>]

2007-06-14  Stipe Tolj  <stolj at kannel.org>
   * gw/dlr.h: fix bitmask for DLR_IS_NOT_FINAL macro, since DLR_SMSC_FAIL is
     a final state, we need to ommit it here to be semantically correct.

2007-06-12 Alexander Malysh <amalysh at kannel.org>
   * gw/bb_smscconn.c: fixed segfault and simplified handling of timeouted
     concatenated MOs.

2007-06-12 Alexander Malysh <amalysh at kannel.org>
   * gwlib/list.c: fixed gwlist_timed_consume.

2007-06-01 Alexander Malysh <amalysh at kannel.org>
   * doc/userguide/userguide.xml, gw/bb_smscconn.c, gw/sms.c,
     gwlib/cfg.def: applied MO concatenation patch. This patch was
     originally written by Paul Bagyenda and then extended by me.
     Thanks Paul!

2007-06-01 Alexander Malysh <amalysh at kannel.org>
   * gw/smsc/smsc_smpp.c: removed GSM-03.38 kludge because it's not
     necessary anymore.

2007-05-20  Stipe Tolj  <stolj at kannel.org>
   * gw/smsc/smsc_at.c: fix a possible segfault while read()ing on the device
     file descriptor. Thanks to Ben Suffolk <ben@vanilla.net> for the patch.
     [Msg-Id: <C7D0A46D-FD3B-4C28-8E25-22BF3EA38DAE@vanilla.net>]
   
2007-05-18 Alexander Malysh <amalysh at kannel.org>
   * gwlib/list.c: use macro instead of direct access.

2007-05-18  Stipe Tolj  <stolj at kannel.org>
   * gwlib/charset.c: imunize charset_[gsm|utf8]_to_[utf8|gsm]() functions 
     for NULL argument. Currently these would panic due to octstr_append() 
     called at the end with a NULL argument. NLC.
   