@@ -1,4 +1,14 @@
 2007-07-22 Alexander Malysh <amalysh at kannel.org>
+   * gw/ota_compiler.c: added new WLAN-related tokens in order to get new
+     Nokia WiFi/VoIP OTA provisioning working. See OMA-DM-CP-2005-001R02-CR_CP-WLAN-.doc.
+     This fixed #406.
+     Thanks to sobomax for patch.
+
+2007-07-22 Alexander Malysh <amalysh at kannel.org>
+   * gw/smsc/smsc_at.c: added CLOCAL to c_cflag. This fixed #404.
+     Thanks to sobomax for reporting and patch.
+
+2007-07-22 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: set reconnecting = 1 if we have issues opening
      device. So we will sleep reconnect time instead of hammering on
      maybe not existing device. This should fix #412.
